Added the clock time

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Digital Clock</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body onload="showTime()">
     <header>
-
+        <h1 id="heading-text">Digital Clock</h1>
     </header>
     <main>
-
+        <h1 id="myTime"></h1>
     </main>
     <script src="./script.js"></script>
 </body>
